--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
-  image_picker:
+  image_picker: ^0.8.5
+  shared_preferences:
 
 dev_dependencies:
   flutter_test:
